--- a/report/01_executive_summary.qmd
+++ b/report/01_executive_summary.qmd
@@ -1,3 +1,5 @@
+\markright{Executive Summary}
+
 # Executive Summary{-}
 
 <!-- 
@@ -41,7 +43,7 @@ knitr::include_graphics("figures/r4ss_plots/plots/catch2_landings_stacked.png")
 
 # changed to csv file until r4ss gets fixed
 
-cat("\\begin{landscape}\n")
+#cat("\\begin{landscape}\n")
 
 catches_es_table <- read.csv("tables/catches_es_table.csv")
 catches_es_table |> 
@@ -53,7 +55,7 @@ catches_es_table |>
    ) |>
    gt::as_latex()
 
-cat("\n\\end{landscape}\n")
+#cat("\n\\end{landscape}\n")
 
 #catches_es_table |>
 #  gt::gt() |>
@@ -154,7 +156,8 @@ knitr::include_graphics("figures/r4ss_plots/plots/ts9_Relative_spawning_output_i
 #| warning: false
 #| eval: true
 #| fig-cap: "Time series of relative spawning output estimated by area (area 1= California, area 2 = Oregon and Washington)."
-#
+#| fig-pos: H
+
 knitr::include_graphics(
     "figures/r4ss_plots/plots/ts10_Relative_spawning_output.png"
 )
@@ -336,8 +339,9 @@ reference_points_table |>
 #| echo: false
 #| warning: false
 #| eval: true
+#| out.width: "\\textwidth"
 #| fig-cap: "Equilibrium yield curve (derived from reference point values) for the base model. Values are based on 2024 fishery selectivity and distribution with steepness fixed at 0.718. The relative spawning output is relative to unfished spawning biomass."
-#
+
 knitr::include_graphics(
     "figures/r4ss_plots/plots/yield1_yield_curve.png"
 )
@@ -404,7 +408,7 @@ This section will be updated after SSC GFSC review.
 #| tbl-cap: !expr if(eval_tables) projections_cap 
 #| tbl-pos: H
 
-cat("\\begin{landscape}\n")
+#cat("\\begin{landscape}\n")
 
 projections_table |>
   gt::gt() |>
@@ -432,7 +436,7 @@ projections_table |>
   ) |>
   gt::as_latex()
 
-cat("\n\\end{landscape}\n")
+#cat("\n\\end{landscape}\n")
 ```
 
 :::
